@@ -16,6 +16,9 @@ not yet  BJH  Release 10.66.00
               pstopnm: fix wrong orientation sometimes when you specify
               both -xsize and -ysize.  Introduced in 10.65.
 
+              make package: Include a man/web directory with .url files for
+              each manual page.
+
 13.12.26 BJH  Release 10.65.00
 
               pamfunc: add -changemaxval.
